--- a/TuyenDung/TuyenDung.csproj
+++ b/TuyenDung/TuyenDung.csproj
@@ -186,6 +186,7 @@
     <Content Include="images\video\1.jpg" />
     <Content Include="Index.aspx" />
     <Content Include="index.html" />
+    <Content Include="JobDetail.aspx" />
     <Content Include="JobList.aspx" />
     <Content Include="js\ajax-mail.js" />
     <Content Include="js\bootstrap.min.js" />
@@ -240,6 +241,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="SQLQuery1.sql" />
+    <Content Include="style.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -278,6 +280,13 @@
     </Compile>
     <Compile Include="Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="JobDetail.aspx.cs">
+      <DependentUpon>JobDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="JobDetail.aspx.designer.cs">
+      <DependentUpon>JobDetail.aspx</DependentUpon>
     </Compile>
     <Compile Include="JobList.aspx.cs">
       <DependentUpon>JobList.aspx</DependentUpon>
