--- a/TuyenDung/TuyenDung.csproj
+++ b/TuyenDung/TuyenDung.csproj
@@ -334,6 +334,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="folder\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
