--- a/TuyenDung/Web.config
+++ b/TuyenDung/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="conStr" connectionString="Data Source=DESKTOP-SQ57UJC;Initial Catalog=TuyenDung;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+    <add name="conStr" connectionString="Data Source=DESKTOP-FN6M4H4\SQLEXPRESS;Initial Catalog=TuyenDung;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
