--- a/TuyenDung/TuyenDung.csproj
+++ b/TuyenDung/TuyenDung.csproj
@@ -210,6 +210,7 @@
     <Content Include="lib\nivo-slider\img\loading.gif" />
     <Content Include="lib\nivo-slider\js\jquery.nivo.slider.js" />
     <Content Include="login.aspx" />
+    <Content Include="manage.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -300,6 +301,13 @@
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="manage.aspx.cs">
+      <DependentUpon>manage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="manage.aspx.designer.cs">
+      <DependentUpon>manage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
